<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="8dp"

    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".Crypto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:text="@string/string_input_text"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:id="@+id/char_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="left"
                android:text="@string/_0"
                android:textSize="14sp"
                android:textColor="@color/white"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
        <Button
            android:id="@+id/delete_normal"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/copy_normal"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/copy"/>

    </LinearLayout>
    <EditText
        android:id="@+id/normaltext"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="#ffffff"
        android:hint="@string/text_to_encrypt"
        android:ems="10"
        android:maxLines="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="5dp"
        tools:ignore="RtlHardcoded"
        android:autofillHints="" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:text="@string/secret_key_8_characters"
        android:textSize="18sp"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/secret_key_8_characters"
        android:inputType="textMultiLine"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="5dp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="3dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:text="@string/encrypted_text"
                android:textSize="18sp"
                android:gravity="left"
                tools:ignore="NestedWeights,RtlHardcoded" />

            <TextView
                android:id="@+id/char_count2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:layout_marginBottom="2dp"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="14sp"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>
        <Button
            android:id="@+id/delete_cipher"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="14dp"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/copy_cipher"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/copy"/>


    </LinearLayout>

    <EditText
        android:id="@+id/cipher_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="#ffffff"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/text_to_decrypt"
        android:inputType="textMultiLine"
        tools:ignore="RtlHardcoded"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/encrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"

            android:layout_marginRight="5dp"
            android:layout_weight=".2"
            android:text="@string/encrypt" />

        <Button
            android:id="@+id/decrypt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight=".2"
            android:text="@string/decrypt"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:layout_weight=".2"
            android:text="@string/share" />
    </LinearLayout>

</LinearLayout>




